# FridgeGuard

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/sqlite_orm/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/data/: CMakeLists.txt  Database.cpp  DatetimeUtils.cpp  ProductDatabase.cpp
src/data/include/: Database.hpp  DatetimeUtils.hpp  DbEntity.hpp  EntityCache.hpp  EntityPtr.hpp  EntityUtils.hpp  ProductDatabase.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp
src/ui/design/: MainWindow.ui
src/ui/include/: MainWindow.hpp
test/: CMakeLists.txt  DatabaseTest.cpp  DatetimeUtilsTest.cpp  ProductDatabaseTest.cpp
